--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 input{
-    width: 15vw;
-    height: 5vh;
-    color: white;
-    background-color:  maroon;
-    opacity: 0.7;
+    width: 30vw;
+    height: 8vh;
+    color:black;
+    background-color:white;
+    opacity: 0.9;
+    padding: 2%;
     
 }
 
 img{
-    margin-left: 29%;
+    margin-left: 8%;
     margin-top: 2%;
-    height: 8rem;
-    width: 50rem;
+    height: 4rem;
+    width: 15rem;
 }
 
 
@@ -29,6 +30,45 @@ img{
 }
 
 body{
-    background-image: url(../img/m6-kaamelott-2.jpg);
+    background-image: url(../img/kaamelott-97229.jpg);
     background-size: 100%;
+    
+    
+}
+
+@media screen and (min-width: 1200px){
+    input{
+        width: 15vw;
+        height: 5vh;
+        color: white;
+        background-color:  maroon;
+        opacity: 0.7;
+        
+    }
+    
+    img{
+        margin-left: 29%;
+        margin-top: 2%;
+        height: 8rem;
+        width: 50rem;
+    }
+    
+    
+    .box{
+        margin-top: 5%;
+        margin-left: 20%;
+        width: 60vw;
+        height: 80vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        justify-content: space-around;
+    
+        
+    }
+    
+    body{
+        background-image: url(../img/m6-kaamelott-2.jpg);
+        background-size: 100%;
+    }
 }
