--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ body{
         color: white;
         background-color:  maroon;
         opacity: 0.7;
+        font-size: 1rem;
+        padding: 1%;
         
     }
     
